[gd_scene load_steps=29 format=3 uid="uid://b64qrmwyupmhd"]

[ext_resource type="Script" path="res://scripts/control.gd" id="1_68oic"]
[ext_resource type="Script" path="res://addons/SharePlugin/Share.gd" id="2_4l02d"]
[ext_resource type="Texture2D" uid="uid://bd1w4wyxl68sq" path="res://icons/Settings.png" id="2_aka5p"]
[ext_resource type="Texture2D" uid="uid://b28hnauo7cnyp" path="res://icons/Add.png" id="2_w5wxl"]
[ext_resource type="Texture2D" uid="uid://nwg42uf1s000" path="res://icons/Arrow_Back.png" id="4_m5rv1"]
[ext_resource type="PackedScene" uid="uid://d21n0oa01l2kr" path="res://scenes/value.tscn" id="5_bajle"]
[ext_resource type="Script" path="res://addons/DeeplinkPlugin/Deeplink.gd" id="6_1xa06"]
[ext_resource type="Script" path="res://scenes/setting.gd" id="6_n6c2q"]
[ext_resource type="PackedScene" uid="uid://6xfn4nq2o6t2" path="res://scenes/note.tscn" id="6_uft3y"]
[ext_resource type="Script" path="res://scenes/dialog_bringer.gd" id="9_orgyt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amku1"]
bg_color = Color(1, 0.941176, 0.121569, 1)
border_width_left = 12
border_width_right = 12
border_width_bottom = 12
border_color = Color(0.286275, 0.286275, 0.286275, 0.588235)
border_blend = true
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jypfp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h5ug6"]
bg_color = Color(0, 0, 0, 0.407843)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0k2w"]
bg_color = Color(0.577009, 0.577008, 0.577008, 1)
border_width_left = 32
border_width_top = 32
border_width_right = 32
border_width_bottom = 32
border_color = Color(0.505344, 0.505344, 0.505344, 1)
border_blend = true
corner_radius_top_left = 24
corner_radius_top_right = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kuwfe"]
content_margin_left = 16.0
content_margin_top = 64.0
content_margin_right = 12.0
content_margin_bottom = 64.0
bg_color = Color(0.129558, 0.129559, 0.129558, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxicq"]
content_margin_left = 18.0
content_margin_right = 18.0
bg_color = Color(0.355314, 0.355314, 0.355313, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j12r0"]
content_margin_left = 18.0
content_margin_right = 18.0
bg_color = Color(0.158472, 0.158472, 0.158472, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ahsl4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.28485, 0.28485, 0.28485, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ym5j1"]
content_margin_left = 18.0
content_margin_right = 18.0
bg_color = Color(0.355314, 0.355314, 0.355313, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_602xs"]
content_margin_left = 18.0
content_margin_right = 18.0
bg_color = Color(0.158472, 0.158472, 0.158472, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qkqxe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo817"]
bg_color = Color(0.30816, 0.72, 0.0864, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 48
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0nnt"]
bg_color = Color(0.32, 0.0128, 0.0128, 1)
border_width_left = 48
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ph25j"]
bg_color = Color(0.576471, 0.576471, 0.576471, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_31n46"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6wfc"]
bg_color = Color(0.136826, 0.136826, 0.136826, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e5k7j"]
bg_color = Color(0.186, 0.62, 0.186, 1)
corner_radius_top_left = 44
corner_radius_top_right = 44
corner_radius_bottom_right = 44
corner_radius_bottom_left = 44

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f1isl"]
bg_color = Color(0.61, 0.244, 0.244, 1)
corner_radius_top_left = 44
corner_radius_top_right = 44
corner_radius_bottom_right = 44
corner_radius_bottom_left = 44

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68oic")

[node name="VersionControl" type="HTTPRequest" parent="."]

[node name="Share" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_4l02d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 205
dragger_visibility = 2

[node name="Header" type="Panel" parent="MarginContainer/Panel/VSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_amku1")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VSplitContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="Head" type="VBoxContainer" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer"]
layout_mode = 2

[node name="Up" type="HBoxContainer" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head"]
layout_mode = 2
size_flags_vertical = 3

[node name="Dn" type="HBoxContainer" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 2

[node name="R" type="HBoxContainer" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn"]
layout_mode = 2

[node name="Settings" type="Button" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn/R"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_jypfp")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5ug6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h5ug6")
theme_override_styles/normal = SubResource("StyleBoxFlat_h5ug6")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn/R/Settings"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = 913.0
offset_bottom = 913.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
mouse_filter = 2
texture = ExtResource("2_aka5p")
stretch_mode = 3

[node name="L" type="HBoxContainer" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Add" type="Button" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn/L"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_jypfp")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5ug6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h5ug6")
theme_override_styles/normal = SubResource("StyleBoxFlat_h5ug6")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn/L/Add"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = 913.0
offset_bottom = 913.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
mouse_filter = 2
texture = ExtResource("2_w5wxl")
stretch_mode = 3

[node name="Elements" type="Panel" parent="MarginContainer/Panel/VSplitContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d0k2w")

[node name="Scroll" type="ScrollContainer" parent="MarginContainer/Panel/VSplitContainer/Elements"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="Margin" type="MarginContainer" parent="MarginContainer/Panel/VSplitContainer/Elements/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 48

[node name="NotesTop" type="VBoxContainer" parent="MarginContainer/Panel/VSplitContainer/Elements/Scroll/Margin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="SettingsM" type="PanelContainer" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 0
offset_left = -1080.0
offset_bottom = 1920.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kuwfe")

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsM"]
layout_mode = 2
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsM/ScrollContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="VersionText" type="RichTextLabel" parent="SettingsM/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "."
fit_content = true

[node name="SttBck" type="Button" parent="SettingsM/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_jypfp")
theme_override_styles/hover = SubResource("StyleBoxFlat_h5ug6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h5ug6")
theme_override_styles/normal = SubResource("StyleBoxFlat_h5ug6")

[node name="TextureRect" type="TextureRect" parent="SettingsM/ScrollContainer/VBoxContainer/SttBck"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 9.0
offset_right = 913.0
offset_bottom = 913.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
mouse_filter = 2
texture = ExtResource("4_m5rv1")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="SettingsM/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 48
text = "command_line"
fit_content = true

[node name="Paste" type="Button" parent="SettingsM/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/pressed = SubResource("StyleBoxFlat_nxicq")
theme_override_styles/normal = SubResource("StyleBoxFlat_j12r0")
text = "Paste from clipboard"

[node name="cmd" type="TextEdit" parent="SettingsM/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 628)
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_ahsl4")
scroll_past_end_of_file = true

[node name="HExtBt" type="HBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer/HExtBt"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ClearExt" type="Button" parent="SettingsM/ScrollContainer/VBoxContainer/HExtBt/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
theme_override_styles/pressed = SubResource("StyleBoxFlat_ym5j1")
theme_override_styles/normal = SubResource("StyleBoxFlat_602xs")
text = "Clear"

[node name="AddExt" type="Button" parent="SettingsM/ScrollContainer/VBoxContainer/HExtBt"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 48
theme_override_styles/pressed = SubResource("StyleBoxFlat_ym5j1")
theme_override_styles/normal = SubResource("StyleBoxFlat_602xs")
text = "Run"

[node name="RichTextLabel" type="RichTextLabel" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][u]Other Settings"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="Settings" type="VBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Setting" type="HBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer/MarginContainer/Settings"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
script = ExtResource("6_n6c2q")

[node name="Title" type="RichTextLabel" parent="SettingsM/ScrollContainer/VBoxContainer/MarginContainer/Settings/Setting"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 46
text = "check versions >>"
fit_content = true

[node name="Switch" type="Button" parent="SettingsM/ScrollContainer/VBoxContainer/MarginContainer/Settings/Setting"]
custom_minimum_size = Vector2(120, 64)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_qkqxe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xo817")
theme_override_styles/normal = SubResource("StyleBoxFlat_b0nnt")
toggle_mode = true
button_pressed = true

[node name="RichTextLabel2" type="RichTextLabel" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][u]
Color Settings"
fit_content = true

[node name="ColorRow1" type="HBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="hdr" parent="SettingsM/ScrollContainer/VBoxContainer/ColorRow1" instance=ExtResource("5_bajle")]
layout_mode = 2
mouse_filter = 2
text = "Header Color"
Targets = [NodePath("../../../../../MarginContainer/Panel/VSplitContainer/Header")]
IsPanel = true
target_values = ["bg_color"]
value_c = Color(1, 0.941176, 0.121569, 1)
does_save = true
global_save = true

[node name="pnl" parent="SettingsM/ScrollContainer/VBoxContainer/ColorRow1" instance=ExtResource("5_bajle")]
layout_mode = 2
mouse_filter = 2
text = "Header Border Color"
Targets = [NodePath("../../../../../MarginContainer/Panel/VSplitContainer/Header")]
IsPanel = true
target_values = ["border_color"]
value_c = Color(0.545098, 0.513726, 0, 1)
does_save = true
global_save = true

[node name="ColorRow2" type="HBoxContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 32

[node name="hdr" parent="SettingsM/ScrollContainer/VBoxContainer/ColorRow2" instance=ExtResource("5_bajle")]
layout_mode = 2
mouse_filter = 2
text = "Panel Color"
Targets = [NodePath("../../../../../MarginContainer/Panel/VSplitContainer/Elements"), NodePath("../../PanelContainer")]
IsPanel = true
target_values = ["bg_color"]
value_c = Color(0.576471, 0.576471, 0.576471, 1)
does_save = true
global_save = true

[node name="pnl" parent="SettingsM/ScrollContainer/VBoxContainer/ColorRow2" instance=ExtResource("5_bajle")]
layout_mode = 2
mouse_filter = 2
text = "Panel Border Color"
Targets = [NodePath("../../../../../MarginContainer/Panel/VSplitContainer/Elements")]
IsPanel = true
target_values = ["border_color"]
value_c = Color(0.42365, 0.423651, 0.423651, 1)
does_save = true
global_save = true

[node name="RichTextLabel3" type="RichTextLabel" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "[center][u]
Default Note"
fit_content = true

[node name="PanelContainer" type="PanelContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ph25j")

[node name="Margin" type="MarginContainer" parent="SettingsM/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 80
theme_override_constants/margin_bottom = 80

[node name="Default Note" parent="SettingsM/ScrollContainer/VBoxContainer/PanelContainer/Margin" instance=ExtResource("6_uft3y")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="SettingsM/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 800)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_31n46")

[node name="Deeplink" type="Node" parent="."]
script = ExtResource("6_1xa06")
scheme = "nomann"
host = "note"

[node name="ColorPicker" type="ColorPicker" parent="."]
visible = false
layout_mode = 0
offset_right = 405.0
offset_bottom = 576.0
picker_shape = 1
sampler_visible = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="UpdateDialog" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -197.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200
script = ExtResource("9_orgyt")

[node name="Mrg" type="MarginContainer" parent="UpdateDialog"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="UpdateDialog/Mrg"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m6wfc")

[node name="V" type="VBoxContainer" parent="UpdateDialog/Mrg"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="m" type="RichTextLabel" parent="UpdateDialog/Mrg/V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
fit_content = true

[node name="dialogue" type="RichTextLabel" parent="UpdateDialog/Mrg/V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "[center]There is a new version available, update now?"
fit_content = true

[node name="H" type="HBoxContainer" parent="UpdateDialog/Mrg/V"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 45

[node name="Yes" type="Button" parent="UpdateDialog/Mrg/V/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_e5k7j")
text = "Yes"

[node name="No" type="Button" parent="UpdateDialog/Mrg/V/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 46
theme_override_styles/normal = SubResource("StyleBoxFlat_f1isl")
text = "No"

[connection signal="pressed" from="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn/R/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VSplitContainer/Header/MarginContainer/Head/Dn/L/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="SettingsM/ScrollContainer/VBoxContainer/SttBck" to="." method="_on_stt_bck_pressed"]
[connection signal="pressed" from="SettingsM/ScrollContainer/VBoxContainer/HBoxContainer/Paste" to="." method="_on_paste_pressed"]
[connection signal="pressed" from="SettingsM/ScrollContainer/VBoxContainer/HExtBt/HBoxContainer/ClearExt" to="." method="_on_clear_ext_pressed"]
[connection signal="pressed" from="SettingsM/ScrollContainer/VBoxContainer/HExtBt/AddExt" to="." method="_on_add_ext_pressed"]
[connection signal="deeplink_received" from="Deeplink" to="." method="_on_deeplink_deeplink_received"]
